# docs/swagger.json
@@ -63,7 +63,7 @@
                 "tags": [
                     "opening"
                 ],
-                "summary": "Create opening",
+                "summary": "Create Opening",
                 "parameters": [
                     {
                         "description": "Request body",
@@ -191,6 +191,20 @@
             "properties": {
                 "errorCode": {
                     "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ListOpeningsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.OpeningResponse"
+                    }
                 },
                 "message": {
                     "type": "string"
