# handler/listOpenings.go
@@ -7,6 +7,17 @@ import (
 	"github.com/kayquesza/api-go-learning/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary      List Opening
+// @Description  List a job opening
+// @Tags         opening
+// @Accept       json
+// @Produce      json
+// @Success      200      {object}  ListOpeningsResponse
+// @Failure      400      {object}  ErrorResponse
+// @Failure      404      {object}  ErrorResponse
+// @Router       /opening [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
